# Mesh-Smoothing

./: CMakeLists.txt  LICENSE  Mesh.cpp  Mesh.h  Painter.cpp  Painter.h  README.md  RemeshingSubdivision.cpp  RemeshingSubdivision.sln  RemeshingSubdivision.vcxproj  RemeshingSubdivision.vcxproj.filters  comparedResults.txt  horse0.off  result.off  result_quad.off  result_tri.off
3D Objects/: bunny.off_result.off
Header/: CmdConfigs.h
Source/: Mesh.cpp  RemeshingSubdivision.cpp
x64/Debug/: RemeshingSubdivision.exe.recipe  RemeshingSubdivision.ilk  RemeshingSubdivision.vcxproj.FileListAbsolute.txt  vc143.idb
x64/Debug/Remeshin.fd90553a.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  RemeshingSubdivision.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
